@@ -17,7 +17,7 @@
                     <version>3.8.1</version>
                     <configuration>
                         <release>13</release>
-                        <compilerArgs>--enable-preview</compilerArgs>
+                        <!--<compilerArgs>&#45;&#45;enable-preview</compilerArgs>-->
                     </configuration>
                 </plugin>
             </plugins>
